--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header id='header'>
     <div class='logo'>
       <a href="/">
-        <strong>Byakuren & Soka Group T-Shirt Site</strong>
+        <strong>Byakuren, Soka Group, Bus Support Group T-Shirt Site</strong>
       </a>
     </div>
     <nav id='nav'>
@@ -83,7 +83,7 @@ section.main.style1>header>:first-child:after,section.main.style2>header>:first-
           <p style='text-align: left;     font-size: 28px; margin-bottom: 2rem'>
             Byakuren will purchase one (1) t-shirt<br>
             Soka Group will purchase one item consisting of two (2) t-shirts and one (1) hat<br>
-            Bus Suport Group will purchase one (1) t-shirt. YMD will also receive one (1) hat
+            Bus Support Group will purchase one (1) t-shirt. YMD will also receive one (1) hat
           </p>
           <p style='text-align: left;     font-size: 28px; margin-bottom: 6rem'>
             Please await instructions for pick-up from your respective Byakuren, Soka Group or Bus Support leader
