--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header id='header'>
     <div class='logo'>
       <a href="/">
-        <strong>Byakuren, Soka Group, Bus Support T-Shirts</strong>
+        <strong>Byakuren, Soka Group, Bus Support</strong>
       </a>
     </div>
     <nav id='nav'>
