--- a/index.html
+++ b/index.html
@@ -80,14 +80,28 @@ section.main.style1>header>:first-child:after,section.main.style2>header>:first-
       <section class='main style2' id='details' style='    margin-top: 2rem;     background: #00aeef;'>
         <header style='text-align: center;'>
           <h1 id='nyz-header' style='    margin-bottom: 2rem; color: white; text-shadow: 10px 10px 0px black;'>Details</h1>
-          <p style='text-align: left;     font-size: 28px; margin-bottom: 2rem'>
-            Byakuren will purchase one (1) t-shirt<br>
-            Soka Group will purchase one item consisting of two (2) t-shirts and one (1) hat<br>
-            Bus Support Group will purchase one (1) t-shirt. YMD will also receive one (1) hat
+                
+ <style> 
+ #shirts {
+  text-align: left;     
+  font-size: 28px;
+  }
+</style>   
+  
+ <ul>
+    <li id="shirts">
+      Byakuren will purchase one (1) t-shirt
+    <li id="shirts">
+      Soka Group will purchase one item consisting of two (2) t-shirts and one (1) hat
+      </li>
+    <li id="shirts">
+      Bus Support Group will purchase one (1) t-shirt. YMD will also receive one (1) hat
+      </li>
+  </ul>         
+          <p style='text-align: left;     font-size: 28px; margin-bottom: 6rem'>  
+            Please purchase only ONE item per individual and await instructions for pick-up from your respective Byakuren, Soka Group or Bus Support leader
           </p>
-          <p style='text-align: left;     font-size: 28px; margin-bottom: 6rem'>
-            Please await instructions for pick-up from your respective Byakuren, Soka Group or Bus Support leader
-          </p>
+              
         </header>
       </section>
       <section class='main style2' id='locations' style='    margin-top: 2rem;     background: #f200c5;'>
