--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@ section.main.style1>header>:first-child:after,section.main.style2>header>:first-
     <li id="shirts">
       Bus Support Group will purchase one (1) t-shirt. YMD will also receive one (1) hat
       </li>
+    <li id="shirts">
+      Mens Division Security will purchase one (1) t-shirt.
+      </li> 
   </ul>         
           <p style='text-align: left;     font-size: 28px; margin-bottom: 6rem'>  
             Please purchase only ONE item per individual and await instructions for pick-up from your respective Byakuren, Soka Group or Bus Support leader
