--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ section.main.style1>header>:first-child:after,section.main.style2>header>:first-
     <div id='wrapper' style="    max-width: 1200px;margin-left: auto;margin-right: auto;">
       <section class='main' style='margin-top: 0rem;'>
         <header style='text-align: center;'>
-          <h1 id='nyz-header' style='   color white;'>Byakuren<br>Soka Group<br>Bus Support<br>Mens Division Security<b>T-Shirts</h1>
+          <h1 id='nyz-header' style='   color white;'>Byakuren<br>Soka Group<br>Bus Support<br>Mens Division<b>T-Shirts</h1>
         </header>
       </section>
       <section class='main style2' id='details' style='    margin-top: 2rem;     background: #00aeef;'>
