--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header id='header'>
     <div class='logo'>
       <a href="/">
-        <strong>Byakuren, Soka Group, Bus Support, Mens Division</strong>
+        <strong>Byakuren, Soka Group, Bus Support, Men Security</strong>
       </a>
     </div>
     <nav id='nav'>
@@ -74,7 +74,7 @@ section.main.style1>header>:first-child:after,section.main.style2>header>:first-
     <div id='wrapper' style="    max-width: 1200px;margin-left: auto;margin-right: auto;">
       <section class='main' style='margin-top: 0rem;'>
         <header style='text-align: center;'>
-          <h1 id='nyz-header' style='   color white;'>Byakuren<br>Soka Group<br>Bus Support<br>Mens Division<br>T-Shirts</h1>
+          <h1 id='nyz-header' style='   color white;'>Byakuren<br>Soka Group<br>Bus Support<br>Mens Security<br>T-Shirts</h1>
         </header>
       </section>
       <section class='main style2' id='details' style='    margin-top: 2rem;     background: #00aeef;'>
