--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <body class='controller__pages action__newyork '>
   <header id='header'>
     <div class='logo'>
-      <a href="/">
-        <strong>Byakuren, Soka Group, Bus Support, Men Security</strong>
+      <a href=Byakuren, Soka Group, Bus Support, Men Security
       </a>
     </div>
     <nav id='nav'>
