--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ section.main.style1>header>:first-child:after,section.main.style2>header>:first-
       </li> 
   </ul>         
           <p style='text-align: left;     font-size: 28px; margin-bottom: 6rem'>  
-            Please purchase only ONE item per individual and await instructions for pick-up from your respective Byakuren, Soka Group or Bus Support leader
+            Please purchase only ONE item per individual and await instructions for pick-up from your respective Byakuren, Soka Group, Bus Support or Mens Security leader
           </p>
               
         </header>
