--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@ section.main.style1>header>:first-child:after,section.main.style2>header>:first-
           <p style='text-align: left;     font-size: 28px; margin-bottom: 6rem'>  
             Please purchase only ONE item per individual and await instructions for pick-up from your respective Byakuren, Soka Group, Bus Support or Mens Security leader
           </p>
+          <p>If you purchase an incorrect t-shirt, please fill-out this refund form immediately:  https://goo.gl/forms/L7vDlf56itFHUiuf2<br>
+            You will have until Wednesday, Sept 21st, 11:59 PM to submit your request. There will NO refunds after that date.</p>
               
         </header>
       </section>
