--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ section.main.style1>header>:first-child:after,section.main.style2>header>:first-
             Please purchase only ONE item per individual and await instructions for pick-up from your respective Byakuren, Soka Group, Bus Support or Mens Security leader<br/>
           <br/> 
             If you purchase an incorrect t-shirt or for the wrong venue, please fill-out this refund form immediately: 
-            <a href="https://goo.gl/forms/L7vDlf56itFHUiuf2"><strong> REFUND FORM</strong><a/>
+            <a href="https://goo.gl/forms/L7vDlf56itFHUiuf2">click here <strong>REFUND FORM</strong></a>
           <br/>
             You will have until Wednesday, Sept 21st, 11:59 PM to submit your request. There will NO refunds after that date.</p>
               
