--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ section.main.style1>header>:first-child:after,section.main.style2>header>:first-
             If you purchase an incorrect t-shirt or for the wrong venue, please fill-out this refund form immediately <br> Click Here: 
             <a href="https://goo.gl/forms/L7vDlf56itFHUiuf2"><strong>REFUND FORM</strong></a>
           </br>
-            You will have until Wednesday, Sept 21st, 11:59 PM to submit your refund request. There will NO refunds accepted after that date.</p>
+            You will have until Wednesday, Sept 19th, 11:59 PM to submit your refund request. There will NO refunds accepted after that date.</p>
               
         </header>
       </section>
